src/objects/Reservable_View__c.object
<CustomObject>
    <fields>
        <fullName>Available_From__c</fullName>
        <description>This field stores the date from which the unit is available</description>
        <inlineHelpText>This field stores the date from which the unit is available</inlineHelpText>
        <label>Available From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buildings__c</fullName>
        <label>Buildings</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Stores the City</description>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Price_Range__c</fullName>
        <label>Maximum Price Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Capacity__c</fullName>
        <label>Minimum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Price_Range__c</fullName>
        <label>Minimum Price Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_for_me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked If saved view is restricted to owner use only.</description>
        <label>Only for me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Records__c</fullName>
        <label>Show Records</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shared Office Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotDeskArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DedicatedDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResidentialUnit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharedOfficeDesk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Reservable View</label>
    <nameField>
        <label>ReservableViews Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReservableViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>